removed data validation from controller into service